# vulnbot

./: .env.example  DOCUMENTATION.md  README.md  main.py  pyproject.toml
src/: chat_engine.py  config.py  dispatcher.py  formatter.py  logger.py
src/clients/: mitre_client.py  nvd_client.py
src/llm/: __init__.py  base.py  ollama_provider.py  openai_provider.py  prompts.py
src/tools/: __init__.py  base.py  mitre_tool.py  nvd_tool.py
