[project]
name = "vulnbot"
version = "0.1.0"
description = "CLI chatbot for querying NVD and MITRE ATT&CK vulnerability databases"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.91.0",
    "httpx>=0.28.1",
    "openai>=2.30.0",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
]
